[package]
name = "alexa_sdk"
version = "0.1.5"
authors = ["Arien Malec <arien.malec@gmail.com>"]
description = "Implements Request/Response for Amazon Alexa skills"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/arienmalec/alexa_rust"
repository = "https://github.com/arienmalec/alexa_rust"
keywords = ["alexa", "amazon"]
edition = "2018"

[dependencies]
serde = "^1"
serde_json = "^1"
serde_derive = "^1"